src/styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .apply-btn {
    @apply hover:bg-[#FC61FF]/[.2] hover:duration-200 hover:ease-in-out;
    @apply relative mx-8 ml-12 rounded-lg border border-solid border-[#FF42F7] py-1 px-8 text-[#FC61FF] [text-shadow:_0_0_10px_#FC61FF];
    @apply after:absolute after:top-12 after:left-2 after:h-[5px] after:w-full after:skew-x-[30deg] after:bg-[#FF42F7] after:opacity-[.7] after:blur-sm after:content-[''];
  }

  .sponsor-btn {
    @apply hover:bg-[#8CEAFF]/[.2] hover:duration-200 hover:ease-in-out;
    @apply relative rounded-lg border border-solid border-[#8CEAFF] py-1 px-8 text-[#8CEAFF] [text-shadow:_0_0_10px_#8CEAFF];
    @apply after:absolute after:top-12 after:left-2 after:h-[5px] after:w-full after:skew-x-[30deg] after:bg-[#8CEAFF] after:opacity-[.7] after:blur-sm after:content-[''];
  }
  .neon-text {
    @apply text-purple_main [text-shadow:_0_0_10px_#FF49ED];
  }
  .purple-btn {
    @apply rounded-md bg-purple_main p-2 text-white hover:bg-[#b63487] hover:duration-200 hover:ease-in-out;
  }

  .feed-popup {
    @apply bg-purple_dark text-white [box-shadow:_0_0_10px_#E149A9];
  }
  .feed-form-input {
    @apply w-[min(30rem,_100%)] border-2 border-[#1E2D79] bg-[#0E0E30] bg-opacity-70 p-4 outline-none focus:border-[#414f94] active:border-[#414f94];
  }
  .form-label {
    @apply font-medium uppercase text-[#72D6E6] md:text-md;
  }
  .form-label::placeholder {
    @apply text-gray-500;
  }
  .form-input {
    @apply mt-2 mb-4 rounded-md border-2 border-[#888888] bg-[#070710] p-2;
  }
  .form-option {
    @apply bg-black/80;
  }
  .error-msg {
    @apply mb-2 font-medium text-[#ff4949];
  }
  .error-form {
    @apply animate-shake border-2 border-[#ff4949] p-2;
  }
}

@layer utilities {
  /* Chrome, Safari and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }

  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

:root {
  color-scheme: dark;
}

html {
  min-height: 100%;
  position: relative;
}

body {
  height: 100%;
}

.top-section {
  background: linear-gradient(180deg, #000, #3f3865 90%);
}

.landing-container {
  background-color: linear-gradient(180deg, #3f3865 60%, #201c33 100%);
}

.sponsors-container {
  background:
    linear-gradient(
      180deg,
      #3f3865 0%,
      rgba(63, 56, 101, 0) 15%,
      rgba(32, 28, 51, 0) 85%,
      #201c33 100%
    ),
    url("/assets/stars-background.svg") no-repeat center;
  background-size: cover;
  overflow: hidden;
}

.team-container {
  background: radial-gradient(50% 50% at 50% 50%, #60549980, #201c33 70.69%);
}

.custom-text-shadow {
  text-shadow: 0 0 10px #97bae1;
}

.application-container {
  background:
    url("/assets/feed-stars-background.svg"),
    linear-gradient(180deg, #122a58 0%, #201c33 100%) repeat center;
  background-size: cover;
}

.portal-background-container {
  background:
    url("/assets/feed-stars-background.svg"),
    linear-gradient(180deg, #122a58 0%, #201c33 100%) repeat center;
  background-size: cover;
  min-height: 100%;
  position: fixed;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  pointer-events: none;
  animation: rotate 30s infinite alternate ease-in-out;
}

.feed-title {
  color: #72d6e6;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: #99dbe6;
  font-size: 2.5rem;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  text-shadow: 0 0 5px #97bae1;
}

@media screen and (min-width: 640px) {
  .feed-title {
    font-size: 3.5rem;
  }
}

.animate-tilt {
  animation: tilt 10s linear infinite;
}

.animate-slight-tilt {
  animation: slight-tilt 20s ease-in-out infinite;
}

.animation-delay-100 {
  animation-delay: 100ms;
}

.animation-delay-500 {
  animation-delay: 500ms;
}

.animation-delay-1000 {
  animation-delay: 1000ms;
}

.animation-delay-2000 {
  animation-delay: 2000ms;
}

.animation-delay-5000 {
  animation-delay: 5000ms;
}

@keyframes tilt {
  50% {
    rotate: 10deg;
  }
}

@keyframes slight-tilt {
  50% {
    rotate: 7deg;
  }
}

@keyframes rotate {
  100% {
    background-position: 15% 50%;
  }
}

